# fastapi_training

./: .flake8  .gitignore  .pre-commit-config.yaml  123.txt  README.md  main.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: python-app.yml
app/: app.py  database.py  dependencies.py  main.py  models.py  oauth2.py  schemas.py  users.py
app/routers/: auth.py  items.py  post.py  user.py  users.py  vote.py
models/: model.py
src/: main.py
test/: test_add.py  test_model.py
tests/: test_model.py
